--- a/docs/algorithm/704.二分查找.md
+++ b/docs/algorithm/704.二分查找.md
@@ -1,28 +1,6 @@
 ---
-id: '704-二分查找'
-slug: /algorithm/array/704-二分查找
+id: '704.二分查找'
 ---
-
-[力扣题目链接](https://leetcode-cn.com/problems/binary-search/)
-
-[学习自代码随想录：704-二分查找](https://programmercarl.com/0704.%E4%BA%8C%E5%88%86%E6%9F%A5%E6%89%BE.html#_704-%E4%BA%8C%E5%88%86%E6%9F%A5%E6%89%BE)
-
-
-给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target  ，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
-
-示例1:
-```text
-输入: nums = [-1,0,3,5,9,12], target = 9     
-输出: 4       
-解释: 9 出现在 nums 中并且下标为 4   
-```
-
-示例2:
-```text
-输入: nums = [-1,0,3,5,9,12], target = 2     
-输出: -1        
-解释: 2 不存在 nums 中因此返回 -1   
-```
 
 ```js
 // [left,right] 左闭右闭区间
