--- a/docs/front-end/typeScript/03原始数据类型.md
+++ b/docs/front-end/typeScript/03原始数据类型.md
@@ -1,5 +1,5 @@
 ---
-id: Typescript的原始类型
+id: 原始数据类型
 ---
 
 ## 基本注解
@@ -32,7 +32,7 @@ let num: number = 123;
 let name: string = 'typescript'
 ```
 
-### 空值
+### void
 
 表示没有任何类型，当一个函数没有返回值时，其返回值类型是 `void`：
 
@@ -42,18 +42,26 @@ function sayHello(): void {
 }
 ```
 
-### Null 和 Undefined
+函数的返回类型一旦被指定为void，它便不能返回任何类型的值（undefined除外）。
+
+```ts
+function hello():void{
+    return;
+}
+```
+
+### null 和 undefined
 
 TypeScript 里，`undefined` 和 `null` 两者各自有自己的类型分别叫做 `undefined` 和 `null`，和 `void` 相似，它们的本身的类型用处不是很大：
 
-默认情况下 null 和 undefined 是所有类型的子类型，就是说你可以把 null 和 undefined 赋值给 number 类型的变量。
+默认情况下 `null` 和 `undefined` 是所有类型的子类型，就是说你可以把 `null` 和 `undefined` 赋值给 `number` 类型的变量。
 
 ```ts
 let num1: number = 1
 let num2: number = 2
 
-num1 = undefined // if --strictNullChecks and strict disabled.
-num2 = null // if --strictNullChecks and strict disabled.
+num1 = undefined // if strictNullChecks disabled.
+num2 = null // if strictNullChecks disabled.
 ```
 
 ```ts
@@ -62,10 +70,10 @@ let n: null = null;
 let v: void
 
 v = undefined
-v = null // if --strictNullChecks and strict disabled.
+v = null // if strictNullChecks disabled.
 ```
 
-但是在正式项目中一般都是开启 `--strictNullChecks` 检测的(或者开启[`strict`](https://www.typescriptlang.org/tsconfig#Strict_Type_Checking_Options_6173)模式，开启该项等于开启所有的严格模式配置)，即 `null` 只能赋值给它自己，`undefined` 可以赋值给它自己和 `void`，这样可以规避非常多的问题。
+但是在正式项目中一般都是开启 `strictNullChecks` 检测的模式，即 `null` 只能赋值给它自己，`undefined` 可以赋值给它自己和 `void`，这样可以规避非常多的问题。
 
 否则就会进行报错提示
 
@@ -75,7 +83,7 @@ v = null // if --strictNullChecks and strict disabled.
 
 ![nullAssignToVoid](../../../static/img/docs/typeScript/nullAssignToVoid.png)
 
-### Symbol
+### symbol
 
 `Symbol` 是在ES2015之后成为新的原始类型,它通过 `Symbol` 构造函数创建:
 
@@ -88,7 +96,7 @@ sym1 === sym2; // false, symbols are unique
 
 ![symbol](../../../static/img/docs/typeScript/symbol.png)
 
-### BigInt
+### bigint
 
 [BigInt](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/BigInt) 是一种内置对象，它提供了一种方法来表示大于 `2^53 - 1` 的整数。这原本是 Javascript中可以用 `Number` 表示的最大数字。`BigInt` 可以表示任意大的整数。
 
@@ -124,3 +132,10 @@ declare let bar: bigint;
 foo = bar; // error: Type 'bigint' is not assignable to type 'number'.
 bar = foo; // error: Type 'number' is not assignable to type 'bigint'.
 ```
+
+## 参考文档
+
+[深入浅出TypeScript](https://www.yuque.com/cuggz/ts/nkxqne)
+
+[TypeScript入门教程](https://ts.xcatliu.com/basics/type-of-array.html)
+
