--- a/docs/front-end/typeScript/06类型推导.md
+++ b/docs/front-end/typeScript/06类型推导.md
@@ -13,6 +13,14 @@ let bar = 'hello'; // bar 是 'string'
 foo = bar; // Error: 不能将 'string' 赋值给 `number`
 ```
 
+使用 `const` 定义的变量和使用 `let` 定义的变量，类型不同：
+
+```ts
+const a = 'foo' // a 的类型就是 'foo'
+let b: string = 'foo' // b 的类型是 string
+```
+
+
 ## 函数
 
 参数
@@ -38,7 +46,7 @@ function add(a: number, b: number) {
 对象字面量
 
 ```ts
-const foo = {
+let foo = {
   a: 123,
   b: 456
 };
@@ -49,7 +57,7 @@ foo.a = 'hello'; // Error：不能把 'string' 类型赋值给 'number' 类型
 数组
 
 ```ts
-const bar = [1, 2, 3];
+let bar = [1, 2, 3];
 bar[0] = 'hello'; // Error：不能把 'string' 类型赋值给 'number' 类型
 ```
 
@@ -58,7 +66,7 @@ bar[0] = 'hello'; // Error：不能把 'string' 类型赋值给 'number' 类型
 对象字面量
 
 ```ts
-const foo = {
+let foo = {
   a: 123,
   b: 456
 };
@@ -70,7 +78,7 @@ a = 'hello'; // Error：不能把 'string' 类型赋值给 'number' 类型
 数组
 
 ```ts
-const bar = [1, 2];
+let bar = [1, 2];
 let [a, b] = bar;
 
 a = 'hello'; // Error：不能把 'string' 类型赋值给 'number' 类型
@@ -82,4 +90,4 @@ a = 'hello'; // Error：不能把 'string' 类型赋值给 'number' 类型
 
 ## 参考文档
 
-[深入理解 TypeScript](https://jkchao.github.io/typescript-book-chinese/typings/typeInference.html#%E5%AE%9A%E4%B9%89%E5%8F%98%E9%87%8F)
+[深入理解 TypeScript](https://jkchao.github.io/typescript-book-chinese/typings/typeInference.html)
