--- a/docs/front-end/typeScript/14类型断言和类型守卫.md
+++ b/docs/front-end/typeScript/14类型断言和类型守卫.md
@@ -218,3 +218,70 @@ doStuff(new Bar());
 ```
 
 TypeScript 甚至能够理解 `else`。当你使用 `if` 来缩小类型时，TypeScript 知道在其他块中的类型并不是 `if` 中的类型
+
+### 字面量类型保护
+
+当你在联合类型里使用字面量类型时，你可以检查它们是否有区别：
+
+```ts
+type Foo = {
+    kind: 'foo'; // 字面量类型
+    foo: number;
+};
+
+type Bar = {
+    kind: 'bar'; // 字面量类型
+    bar: number;
+};
+
+function doStuff(arg: Foo | Bar) {
+    if (arg.kind === 'foo') {
+        console.log(arg.foo); // ok
+        console.log(arg.bar); // Error
+    } else {
+        // 一定是 Bar
+        console.log(arg.foo); // Error
+        console.log(arg.bar); // ok
+    }
+}
+```
+
+### 使用定义的类型保护
+
+JavaScript 并没有内置非常丰富的、运行时的自我检查机制。当你在使用普通的 JavaScript 对象时（使用结构类型，更有益处），你甚至无法访问 `instanceof` 和 `typeof`。在这种情景下，你可以创建用户自定义的类型保护函数，这仅仅是一个返回值为类似于`someArgumentName is SomeType` 的函数，如下：
+
+```ts
+// 仅仅是一个 interface
+interface Foo {
+    foo: number;
+    common: string;
+}
+
+interface Bar {
+    bar: number;
+    common: string;
+}
+
+// 用户自己定义的类型保护！
+function isFoo(arg: Foo | Bar): arg is Foo {
+    return (arg as Foo).foo !== undefined;
+}
+
+// 用户自己定义的类型保护使用用例：
+function doStuff(arg: Foo | Bar) {
+    if (isFoo(arg)) {
+        console.log(arg.foo); // ok
+        console.log(arg.bar); // Error
+    } else {
+        console.log(arg.foo); // Error
+        console.log(arg.bar); // ok
+    }
+}
+
+doStuff({ foo: 123, common: '123' });
+doStuff({ bar: 123, common: '123' });
+```
+
+## 参考文档
+
+[深入理解TypeScript](https://jkchao.github.io/typescript-book-chinese/typings/typeGuard.html)
